--- a/source/common/lang/en-GB.json
+++ b/source/common/lang/en-GB.json
@@ -5,7 +5,7 @@
             "ScaredCoward"
         ],
         "license": "GNU GPL v3",
-        "updated_at": "2019-10-31T17:17:00.000000Z"
+        "updated_at": "2019-11-07T19:35:17.000000Z"
     },
     "dialog": {
         "about": {
@@ -161,6 +161,15 @@
             "auto_dark_mode_schedule": "Schedule",
             "auto_dark_mode_schedule_format": "HH:MM (24h format)",
             "auto_dark_mode_system": "Follow Operating System",
+            "autocorrect": {
+                "active_label": "Turn on AutoCorrect",
+                "quotes_double_label": "Primary Magic Quotes",
+                "quotes_single_label": "Secondary Magic Quotes",
+                "replacement_info": "Here you can define certain strings that will be replaced when AutoCorrect is on. The characters on the left side will be replaced with whatever comes on the right.",
+                "style_libre_office_label": "LibreOffice style",
+                "style_word_label": "Word style",
+                "title": "AutoCorrect"
+            },
             "checkForBeta": "Notify me about beta releases",
             "choose_file": "Choose file \u2026",
             "citation_database": "Citation Database (CSL JSON or BibTex)",
